src/objects/Community_Profile__c.object
<CustomObject>
    <description>This object describes the &quot;role&quot; or persona of the Contact when logged into the Community.  It allows the org to store varying data for different roles or types.</description>
    <fields>
        <fullName>Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows a Community Profile to have a designated Advisor user.  We recommend this field should be Read Only and only populated by a System Admin.</description>
        <label>Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Community_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact that is associated with this Community Profile record.  A Contact may have multiple Community Profiles (one for each role)</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Profiles</relationshipLabel>
        <relationshipName>Community_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address for profile</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates primary profile for user</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_SF_ID__c</fullName>
        <description>Represents the 18 digit unique Salesforce ID.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the 18 digit unique Salesforce ID.</inlineHelpText>
        <label>Profile SF ID</label>
        <type>Text</type>
    </fields>
    <label>Community Profile</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Community Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Profiles</pluralLabel>
    <recordTypes>
        <fullName>Alumni</fullName>
        <active>true</active>
        <description>To be used to capture fields for an Alumni Community Profile</description>
        <label>Alumni</label>
    </recordTypes>
    <recordTypes>
        <fullName>FacultyStaff</fullName>
        <active>true</active>
        <description>To be used to capture fields for a Faculty/Staff Community Profile</description>
        <label>Faculty/Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student</fullName>
        <active>true</active>
        <description>To be used to capture fields for a Student Community Profile</description>
        <label>Student</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>